feat: finishing ReaderTest